# ellipsoids_eLife2025

./: .gitignore  .pre-commit-config.yaml  README.md  fit_4d_human.py  fit_6d_human.py  fit_MOCS.py  pyproject.toml
aepsy/: pyproject.toml
aepsych/: pyproject.toml
aepsych/expt/eLife_4D_color_discrimination_thres/: run_4d_expt.py  run_4d_expt_practice.py
aepsych/sim/: sim_adaptive_4d6d.py
analysis/: MOCS_thresholds.py  bin_pCorrect.py  color_thres.py  conf_interval.py  config_generator.py  cross_validation.py  data_validation.py  ellipses_tools.py  ellipsoids_tools.py  fallback_trial_strat.py  gen_expt_trials.py  model_performance.py  model_predictions_inCIELab.py  sim_trials.py  simulations_CIELab.py  trial_placement.py  trial_sequence.py  utils_communication.py  utils_load.py
cieLab/: Isothreshold_ellipses_3slices_CIELab.py  Isothreshold_ellipses_isoluminant_CIELab.py  Isothreshold_ellipsoids_CIELab.py
core/: chebyshev.py  geodesics.py  model_predictions.py  oddity_task.py  optim.py  utils.py  viz.py  wishart_process.py
dconfig/: config_4Ddata.py  config_pregenSobol.py
eval/: comp_GegenfurtnerEllipses.py  comp_MacAdamEllipses.py  comp_modelpred_CIE_2D.py  comp_slope_corrcoef.py  eval_effects_decay_rate_summary.py  eval_hyperparams.py  eval_lapse_rate_MOCS_trials.py  eval_pC_polarAngle.py  eval_residuals.py  eval_thres_at_suprathres_refs.py
export/: export_data_csv.py  pregen_MOCS_trials_CIELab.py  pregen_MOCS_trials_W.py  pregen_Sobol.py
model_demo/: visualize_chebyshev_basis.py  visualize_covariance_matrix_2D4D.py  visualize_covariance_matrix_3D6D.py
(+38 files in other folders)
